Added stage project

--- a/tmuxinator/stage.yml
+++ b/tmuxinator/stage.yml
@@ -5,36 +5,29 @@ root: ~/
 
 windows:
   - tomcat:
-      layout: main-vertical
+      layout: even-horizontal
       panes:
         - shell:
             - ssh cfoley@stage.starfishsolutions.com
+            - w
         - catalina:
             - ssh cfoley@stage.starfishsolutions.com
-            - sudo less -S +F /var/log/starfish/tomcat/catalina.out
-        - htop:
-            - ssh cfoley@stage.starfishsolutions.com
-            - top -p $(pgrep -d ',' "jsvc")
+            - sudo multitail -cS cj /var/log/starfish/tomcat/catalina.out -I /var/log/starfish/tomcat/starfish-stage.log -I /var/log/starfish/tomcat/starfish-admin-stage.log
   - batch:
-      layout: main-vertical
+      layout: even-horizontal
       panes:
         - shell:
             - ssh cfoley@stage.starfishsolutions.com
+            - w
         - log:
             - ssh cfoley@stage.starfishsolutions.com
-            - less -S +F /var/log/starfish/starfish-batch-stage/starfish-batch.log
-        - htop:
-            - ssh cfoley@stage.starfishsolutions.com
-            - top -p $(ps aux | grep "starfish-batch.jar" | grep -v grep | awk '{ print $2 }')
+            - multitail -cS cj /var/log/starfish/starfish-batch-stage/starfish-batch.log
   - importer:
-      layout: main-vertical
+      layout: even-horizontal
       panes:
         - shell:
             - ssh cfoley@stage.starfishsolutions.com
+            - w
         - log:
             - ssh cfoley@stage.starfishsolutions.com
-            - less -S +F /var/log/starfish/data-importer-stage/data-importer.log
-        - htop:
-            - ssh cfoley@stage.starfishsolutions.com
-            - top -p $(ps aux | grep "data-importer.jar" | grep -v grep | awk '{ print $2 }')
-    
+            - multitail -cS cj /var/log/starfish/data-importer-stage/data-importer.log
