--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,25 @@
+#scrollback limit
 set-option -g history-limit 30000
+
+#keep tmux from changing the window titles
 set-option -g allow-rename off
 
-unbind k
-bind k kill-session
+#if creating tmuxinator sessions frequently
+unbind C-k
+bind C-k kill-session
 
+#just like screen...
+unbind C-b
+bind C-b last-window
 
+#status bar
+set -g status-bg default #transparent
+set -g status-fg "red"
+set -g window-status-format "#{?window_bell_flag,!,.}" #all the other window titles gone
+set -g window-status-current-format "#W"
+set -g status-left " #S"
+set -g status-right "%a %F %R"
+set -g status-justify centre
+
+# listen to alerts from all windows
+set -g bell-action any
