--- a/tmux.conf
+++ b/tmux.conf
@@ -11,11 +11,13 @@ bind C-k kill-session
 #just like screen...
 unbind C-b
 bind C-b last-window
+unbind b
+bind b send-prefix
 
 #status bar
 set -g status-bg default #transparent
-set -g status-fg "red"
-set -g window-status-format "#{?window_bell_flag,!,.}" #all the other window titles gone
+set -g status-fg "brightred"
+set -g window-status-format "#{?window_bell_flag,!,_}" #all the other window titles gone
 set -g window-status-current-format "#W"
 set -g status-left " #S"
 set -g status-right "%a %F %R"
@@ -23,3 +25,6 @@ set -g status-justify centre
 
 # listen to alerts from all windows
 set -g bell-action any
+
+#mouse scroll
+setw -g mode-mouse on
