--- a/tmux.conf
+++ b/tmux.conf
@@ -1,26 +1,22 @@
 #scrollback limit
-set-option -g history-limit 30000
+set -g history-limit 30000
 
 #keep tmux from changing the window titles
-set-option -g allow-rename off
+set -g allow-rename off
 
 #if creating tmuxinator sessions frequently
-unbind C-k
-bind C-k kill-session
+bind-key C-k kill-session
 
-#just like screen...
-unbind C-b
-bind C-b last-window
-unbind b
-bind b send-prefix
+#change format of the choose-window window
+bind-key w choose-window -F "#F #W"
 
 #status bar
 set -g status-bg default #transparent
-set -g status-fg "red"
+set -g status-fg "green"
 set -g window-status-format "#{?window_bell_flag,!,.}" #all the other window titles gone
 set -g window-status-current-format "#W"
 set -g status-left " #S"
-set -g status-right "%a %F %R"
+set -g status-right "%a %F %R "
 set -g status-justify centre
 
 # listen to alerts from all windows
@@ -28,3 +24,6 @@ set -g bell-action any
 
 #mouse scroll
 setw -g mode-mouse on
+
+#activity changes status line
+setw -g monitor-activity on
