Using content monitoring instead of window monitoring

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,8 @@ bind-key w choose-window -F "#F #W"
 
 #status bar
 set -g status-bg default #transparent
-set -g status-fg "green"
-set -g window-status-format "#{?window_bell_flag,!,.}" #all the other window titles gone
+set -g status-fg "brightblue"
+set -g window-status-format "#{?window_bell_flag,!,#{?window_content_flag,+,.}}" #all the other window titles gone
 set -g window-status-current-format "#W"
 set -g status-left " #S"
 set -g status-right "%a %F %R "
@@ -26,4 +26,6 @@ set -g bell-action any
 setw -g mode-mouse on
 
 #activity changes status line
-setw -g monitor-activity on
+#setw -g monitor-activity on
+
+setw -g monitor-content "Write failed: Broken pipe"
