Added colors for content and bell styles

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,9 @@ bind-key w choose-window -F "#F #W"
 set -g status-bg default #transparent
 set -g status-fg "brightblue"
 set -g window-status-format "#{?window_bell_flag,!,#{?window_content_flag,+,.}}" #all the other window titles gone
+set -g window-status-style "fg=brightblue"
+set -g window-status-content-style "fg=magenta"
+set -g window-status-bell-style "fg=yellow"
 set -g window-status-current-format "#W"
 set -g status-left " #S"
 set -g status-right "%a %F %R "
