Adding ProxyCommands for ORE

--- a/config
+++ b/config
@@ -5,3 +5,10 @@ Compression=yes
 ControlMaster auto
 ControlPath /tmp/%r@%h:%p
 ControlPersist yes
+
+Host nat1.ore.starfishsolutions.com
+    ProxyCommand  ssh -W %h:%p rightscale@bastion.ore.starfishsolutions.com
+
+Host 172.30.?.?
+    ProxyCommand  ssh -W %h:%p rightscale@bastion.ore.starfishsolutions.com
+
