ProxyCommand changes, implemented multiple hops with different usernames / identity files using multiple ssh config files

--- a/config
+++ b/config
@@ -6,9 +6,14 @@ ControlMaster auto
 ControlPath /tmp/%r@%h:%p
 ControlPersist yes
 
-Host nat1.ore.starfishsolutions.com
+Host nas.ore.starfishsolutions.com
     ProxyCommand  ssh -W %h:%p rightscale@bastion.ore.starfishsolutions.com
 
-Host 172.30.?.?
+Host nat*.ore.starfishsolutions.com
     ProxyCommand  ssh -W %h:%p rightscale@bastion.ore.starfishsolutions.com
+
+Host 172.30.*.*
+    ProxyCommand  ssh -W %h:%p rightscale@bastion.ore.starfishsolutions.com
+    StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
 
