--- a/tmux.conf
+++ b/tmux.conf
@@ -11,15 +11,20 @@ bind-key C-k kill-session
 bind-key w choose-window -F "#F #W"
 
 #status bar
-set -g status-bg default #transparent
-set -g status-fg "brightblue"
-set -g window-status-format "#{?window_bell_flag,!,#{?window_content_flag,+,.}}" #all the other window titles gone
-set -g window-status-style "fg=brightblue"
-set -g window-status-bell-style "fg=yellow"
-set -g window-status-current-format "#W"
-set -g status-left " #S"
+#set -g status-bg default #transparent
+set -g status-bg "brightred"
+set -g status-fg "black"
+#set -g window-status-format "#{?window_bell_flag,!,#{?window_content_flag,+,.}}" #all the other window titles gone
+#set -g window-status-style "fg=green"
+#set -g window-status-bell-style "fg=yellow"
+#set -g window-status-current-format "#W"
+set -g status-left " [#H] "
+set -g status-left-length 20
 set -g status-right "%a %F %R "
-set -g status-justify centre
+#set -g status-justify centre
 
 # listen to alerts from all windows
 set -g bell-action any
+
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
