--- a/tmux.conf
+++ b/tmux.conf
@@ -10,9 +10,15 @@ bind-key C-k kill-session
 #change format of the choose-window window
 bind-key w choose-window -F "#F #W"
 
+# force a reload of the config file
+bind r source-file ~/.tmux.conf
+
+# just like screen!
+bind-key C-b last-window
+
 #status bar
 set -g status-bg default #transparent
-set -g status-fg "green"
+set -g status-fg "brightmagenta"
 set -g window-status-format "#{?window_bell_flag,!,#{?window_content_flag,+,.}}" #all the other window titles gone
 set -g window-status-bell-style "fg=yellow"
 set -g window-status-current-format "#W"
@@ -26,3 +32,9 @@ set -g bell-action any
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
+
+# 256 color term so things like airline show up and look nice
+set -g default-terminal "screen-256color"
+
+# insanely annoying mouse behavior without this
+set -g mouse on
